some more changes, adding some images very soon

--- a/about.html
+++ b/about.html
@@ -13,9 +13,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 		</head>
 <body>
-<div class="ja2">
+<container class="ja2">
 	<center> <h1> About Me </h1> </center>
-</div>
+</container>
 <div id="center2"> 
 <br> <center> 
 	<a class="button" href="index.html">Home</a>
@@ -24,5 +24,8 @@
 	<a class="button" href="contact.html">Contact</a>
 	</center>
 </div> 
+<container class="jordan">
+	I have been in the APP Academy at PHS for about 2 years now. I have learned many things and completed all kinds of projects. I have learned HTML/CSS, a nice ammount of PHP, and some JS.
+</container>
 </body>
 </html>
