--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,32 @@
-portfolio.html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+    	<meta name="description" content="">
+    	<link rel="stylesheet" type="text/css" href="main.css"> 
+	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	    <link rel="stylesheet" type="text/javascript" href="js/bootstrap.min.js">
+  	    <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Untitled</title>
+		<link rel="stylesheet" type="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+		</head>
+<body>
+<container class="ja2">
+	<center> <h1> Portfolio </h1> </center>
+</container>
+<div id="center2"> 
+<br> <center> 
+	<a class="button" href="index.html">Home</a>
+	<a class="button" href="portfolio.html">Portfolio</a>
+	<a class="button" href="contact.html">Contact</a>
+	</center>
+</div> 
+<div2 class="jordan">
+<p class="border"> 
+	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below I have some of the projects that I have completed this year alone. 
+	</p>
+</div2>
+</body>
+</html>
