Working on some more stylizing and contact form is coming soon

--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,32 @@
-contact.html
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+    	<meta name="description" content="">
+    	<link rel="stylesheet" type="text/css" href="main.css"> 
+	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  	    <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Untitled</title>
+		<link rel="stylesheet" type="css/main.css">
+		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+		</head>
+<body>
+<container class="ja2">
+	<center> <h1> Contact </h1> </center>
+</container>
+<div id="center3"> 
+<br> <center> 
+	<a class="button" href="index.html">Home</a>
+	<a class="button" href="portfolio.html">Portfolio</a>
+	</center>
+</div> 
+<div>
+
+</div>
+
+      <script type="text/javascript" href="js/bootstrap.min.js"></script>
+	  <script type="text/javascript" href="js/main.js"></script>
+</div>
+</body>
+</html>
