--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		</head>
 <body>
 <div class="jo">
-	<h1> <center> WELCOME </h1></center>
+	<h1> <center> Jordan The Web Developer </center> </h1>
 </div>
 <div id="center"> 
 <br> <center> 
