--- a/portfolio.html
+++ b/portfolio.html
@@ -5,11 +5,11 @@
     	<meta name="description" content="">
     	<link rel="stylesheet" type="text/css" href="main.css"> 
 	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	    <link rel="stylesheet" type="text/javascript" href="js/bootstrap.min.js">
   	    <meta name="viewport" content="width=device-width">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Untitled</title>
 		<link rel="stylesheet" type="css/main.css">
+		<link rel="stylesheet" type="css/.css">
 		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 		</head>
 <body>
@@ -19,14 +19,56 @@
 <div id="center2"> 
 <br> <center> 
 	<a class="button" href="index.html">Home</a>
-	<a class="button" href="portfolio.html">Portfolio</a>
 	<a class="button" href="contact.html">Contact</a>
 	</center>
 </div> 
 <div2 class="jordan">
-<p class="border"> 
-	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below I have some of the projects that I have completed this year alone. 
+<p> 
+<center>
+<h2>
+	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below are some of the projects that I have completed this year alone. 
+</h2>
 	</p>
+</center>
 </div2>
+ <div class="three">
+  <div class="borders ">
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators --> 
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="pics/td2.png">
+    </div>
+    <div class="item">
+      <img src="pics/td2.png">
+    </div>
+    <div class="item">
+      <img src="pics/td2.png">
+    </div>
+     <div class="item">
+      <img src="pics/td2.png">
+    </div>
+  </div>
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"> </span>
+  </a>
+</div>
+ 
+      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
+      <script type="text/javascript" src="js/bootstrap.min.js"> </script>
+      <script src=”jquery.mobile.custom.min.js”></script>  
+</div>
 </body>
 </html>
