Carousel resizing fixed, buttons fixed

--- a/contact.html
+++ b/contact.html
@@ -12,17 +12,31 @@
 		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 		</head>
 <body>
-<container class="ja2">
+<header class="ja2">
 	<center> <h1> Contact </h1> </center>
-</container>
+</header>
 <div id="center3"> 
-<br> <center> 
+ <center> 
 	<a class="button" href="index.html">Home</a>
 	<a class="button" href="portfolio.html">Portfolio</a>
 	</center>
 </div> 
 <div>
+<h2 class="ink">For business inqueries please contact me by filling out the form below</h2>
 
+<center> <form action="MAILTO:jajaber13@gmail.com" method="post" enctype="text/plain">
+Name:<br> 
+
+<input type="text" name="name" value="your name"><br>
+E-mail:<br> 
+<input type="text" name="mail" value="your email"><br>
+Comment:<br> </form>
+<input type="text" name="comment" value="your comment" size="50"><br><br>
+<class ="send">
+<input type="submit" value="Send">
+<input type="reset" value="Reset">
+</class>
+</form>
 </div>
 
       <script type="text/javascript" href="js/bootstrap.min.js"></script>
