--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		</head>
 <body>
 <div class="jo">
-	<h1> <center> Jordan The Web Developer </center> </h1>
+	<h1> <center> Jordan Abujaber </center>
+	<hr width="70%">
+	 <center> Web Developer </center> </h1>
 </div>
-<div id="center"> 
+<div id="center4"> 
 <br> <center> 
 	<a class="button" href="portfolio.html">Portfolio</a>
 	<a class="button" href="contact.html">Contact</a>
