--- a/portfolio.html
+++ b/portfolio.html
@@ -7,68 +7,65 @@
 	    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   	    <meta name="viewport" content="width=device-width">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Untitled</title>
+		<title>Jordan | Web Developer</title>
 		<link rel="stylesheet" type="css/main.css">
 		<link rel="stylesheet" type="css/.css">
 		<link href='http://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 		</head>
 <body>
-<container class="ja2">
+<header class="ja2">
 	<center> <h1> Portfolio </h1> </center>
-</container>
+</header>
 <div id="center2"> 
-<br> <center> 
-	<a class="button" href="index.html">Home</a>
-	<a class="button" href="contact.html">Contact</a>
+	<center> 
+		<a class="button" href="index.html">Home</a>
+		<a class="button" href="contact.html">Contact</a>
 	</center>
 </div> 
-<div2 class="jordan">
-<p> 
-<center>
-<h2>
-	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below are some of the projects that I have completed this year alone. 
-</h2>
-	</p>
-</center>
-</div2>
- <div class="three">
-  <div class="borders ">
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators --> 
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-  </ol>
+ <div class="border2">
+      <p></p>
+      <div class="container2">
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item active">
-      <img src="pics/td2.png">
-    </div>
-    <div class="item">
-      <img src="pics/td2.png">
-    </div>
-    <div class="item">
-      <img src="pics/td2.png">
-    </div>
-     <div class="item">
-      <img src="pics/td2.png">
-    </div>
-  </div>
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left"></span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right"> </span>
-  </a>
+<h3>
+	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below are some of the projects that I have completed this year alone. 
+</h3>
 </div>
- 
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
-      <script type="text/javascript" src="js/bootstrap.min.js"> </script>
-      <script src=”jquery.mobile.custom.min.js”></script>  
 </div>
+
+</div>
+<div class="border">
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	<!-- Indicators --> 
+	<ol class="carousel-indicators">
+		<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+		<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	</ol>
+
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner">
+		<div class="item active">
+			<img src="pics/td2.png">
+		</div>
+		<div class="item">
+			<img src="pics/awesome.png">
+		</div>
+		<div class="item">
+			<img src="pics/dm.png">
+		</div>
+	</div>
+
+<!-- Controls -->
+	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+		<span class="glyphicon glyphicon-chevron-left"></span>
+	</a>
+	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+		<span class="glyphicon glyphicon-chevron-right"> </span>
+	</a>
+	</div>
+</div>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"> </script>
+	<script type="text/javascript" src="js/bootstrap.min.js"> </script>
+	<script src=”jquery.mobile.custom.min.js”></script>  
 </body>
 </html>
