--- a/contact.html
+++ b/contact.html
@@ -22,21 +22,19 @@
 	</center>
 </div> 
 <div>
-<h2 class="ink">For business inqueries please contact me by filling out the form below</h2>
-
-<center> <form action="MAILTO:jajaber13@gmail.com" method="post" enctype="text/plain">
-Name:<br> 
-
+	<h2>Contact me by filling out the form below</h2>
+<center> 
+<form action="MAILTO:jajaber13@gmail.com" method="post" enctype="text/plain">
+Name:<br>
 <input type="text" name="name" value="your name"><br>
-E-mail:<br> 
+E-mail:<br>
 <input type="text" name="mail" value="your email"><br>
-Comment:<br> </form>
-<input type="text" name="comment" value="your comment" size="50"><br><br>
-<class ="send">
+Comment:<br>
+<input type="text" name="comment" value="your comment" size="30"><br><br>
 <input type="submit" value="Send">
 <input type="reset" value="Reset">
-</class>
 </form>
+</center>
 </div>
 
       <script type="text/javascript" href="js/bootstrap.min.js"></script>
