--- a/portfolio.html
+++ b/portfolio.html
@@ -22,15 +22,20 @@
 		<a class="button" href="contact.html">Contact</a>
 	</center>
 </div> 
- <div class="border2">
-      <p></p>
-      <div class="container2">
 
+ <div class="border2">
+      <div class="container2">
+<container class="link">
+<p><a href="http://localhost/todoapp2.0/index.php">To-Do App</a> </p>
+<p> <a href="http://localhost/awesomenauts/index.php">Awesomenauts Platformer Game</a> </p>
+<p> <a href="http://jordan13.github.io/Home.html">Restaurant Website</a> </p>
+</container>
 <h3>
-	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below are some of the projects that I have completed this year alone. 
+	Hello, my name is Jordan Abujaber. I am currently in a Web Development Program at Pasadena High School known as the "APP Academy". I have currently been in the APP Academy for 2 years now and have learned alot. I have done HTML/CSS, PHP, and Javascript/Melonjs. Below are some of the projects that I have completed this year alone.
 </h3>
 </div>
 </div>
+
 
 </div>
 <div class="border">
@@ -46,12 +51,21 @@
 	<div class="carousel-inner">
 		<div class="item active">
 			<img src="pics/td2.png">
+			<div class="carousel-caption">
+			<font color="Black">Here is the todo app that I made.</font>
+      </div>
 		</div>
 		<div class="item">
 			<img src="pics/awesome.png">
+			<div class="carousel-caption">
+			<font color="Black">Here is the awesomenauts platformer game made by me.</font>
+      </div>
 		</div>
 		<div class="item">
 			<img src="pics/dm.png">
+			<div class="carousel-caption">
+			<font color="Black">This is a website that I made for a restaurant. </font>
+      </div>
 		</div>
 	</div>
 
